# mkado

./: CHANGELOG.md  README.md  pyproject.toml
docs/: batch-workflow.rst  file-formats.rst  index.rst  tutorial.rst  vcf-input.rst
src/mkado/: batch_workers.py  cli.py  vcf_workers.py
src/mkado/core/: cds.py  codons.py
src/mkado/data/: __init__.py  genetic_codes.py
src/mkado/io/: gff.py  plotting.py  vcf.py
tests/: test_cds.py  test_gff.py  test_vcf.py
