[project]
name = "mkado"
version = "0.3.0"
description = "Modern Python implementation of the McDonald-Kreitman test toolkit"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Andrew Kern", email = "adkern@uoregon.edu" }
]
keywords = ["mcdonald-kreitman", "population-genetics", "molecular-evolution", "selection", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "numpy>=2.4.1",
    "rich>=14.2.0",
    "scipy>=1.17.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
vcf = ["cyvcf2", "pysam"]

[project.scripts]
mkado = "mkado.cli:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
